# FineTree

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.mac  PAGE_LEVEL_PREDICTED_SCHEMA.md  Qwen3_5_4B_FineTree_A100 copy.ipynb  Qwen3_5_4B_FineTree_A100.ipynb  Qwen3_5_MoE.ipynb  README.md  Untitled 3.rtf  Untitled.rtf  clean_for_json_import_in_ui.txt  data.pkl  dscreate.py  finetree-v2_9.py  finetree-v3_0-value-bbox-factnum.py  finetree_config.example.toml  ls_ui.txt  prompt.txt  push_hf_dataset_compact_approved.py  pyproject.toml  pytest.ini  requirements copy.txt  requirements.txt  requirements_clean.txt  requirements_portable.txt  schemas.py  some_output.txt  start.sh  testngrok.py
benchmark/: README.md  asaf_benchmark.py  benchmark_config.yaml  config.example.yaml  evaluate_json_pages.py  new_pred.json  playground.ipynb
benchmark/Qwen3.5-27B-FineTree-V2.1/: pred_1.txt  pred_2.txt  pred_3.txt
benchmark/input/: README.txt  args.json  info.json  logging.jsonl  report.json  sample_page_prediction.json
benchmark/output/: evaluation_report.json
benchmark_new/: README.md  config.py  main.py
configs/: finetune_qwen35a3_vl.yaml  finetune_qwen35a3_vl_100gb_safe.yaml  finetune_qwen35a3_vl_lowmem.yaml  qwen_simple_infer_api.yaml  qwen_ui_runpod_pod_local_4bit.yaml  qwen_ui_runpod_pod_local_8bit.yaml  qwen_ui_runpod_pod_local_bf16.yaml  qwen_ui_runpod_pod_openai.yaml  qwen_ui_runpod_queue.yaml  qwen_ui_runpod_queue_qwen35_original.template.yaml  qwen_ui_runpod_queue_qwen35_original.yaml
data/: workspace_review_state.json
data/annotations/: pdf_2.json  pdf_2.tree.html  pdf_3.json  pdf_4.json  pdf_5.json  pdf_6.json  pdf_english.json  test.json
data/annotations_backup_20260307T140920/: pdf_2.json  pdf_2.tree.txt  pdf_3.json  pdf_7.json  test.json
data/datasets/: 4ee1c00b-ef4d-4bc9-8fe3-e34ce38f9b69.json  b9172927-e1c9-40ca-81a5-963f0440ce07.json
data/doctr_logs/: 20260329-095153-612311_page_0004.json  20260329-095404-559472_page_0006.json  20260329-100158-000411_page_0033.json  20260329-100344-154408_page_0038.json  20260329-114904-408561_page_0032.json  20260329-114904-417_page_0032_align.json  20260329-115935-919764_page_0004.json  20260329-115935-923_page_0004_align.json  20260329-120000-262_page_0004_align.json  20260329-120253-468999_page_0005.json  20260329-120549-499_page_0005_align.json  20260329-120818-640776_page_0006.json  20260329-120818-643_page_0006_align.json  20260329-120956-570657_page_0007.json  20260329-120956-572_page_0007_align.json  20260329-121008-245_page_0007_align.json  20260329-123439-009905_page_0001.json  20260329-123544-311_page_0001_align.json  20260329-124657-736604_page_0002.json  20260329-124657-738_page_0002_align.json  (+763 more)
db/: docker-compose.yml  explore.sh  finetree.db  load_db.py
docs/: architecture.md  developer.md  finetree_workflow.md  training_and_benchmark.md
finetree-v1/: README.md  requirements.txt  schemas.py
frontend/: index.html  package-lock.json  package.json
notebooks/: Deepseek_OCR_2_(3B)_FineTree.ipynb  colab.ipynb  ms_swift_qwen35.ipynb  ms_swift_qwen35_train_and_bundle.ipynb  ms_swift_qwen35_working.ipynb  qwen35_finetree_v21_infer_only.ipynb  qwen3_5_transformers.ipynb  qwen3_5_transformers_flash_smoke.ipynb
ocr/: ocr.py  requirements.txt
outputs/: Untitled 2.rtf  Untitled 4.rtf
prompts/: extraction_prompt.txt  gemini_autocomplete_prompt.txt  gemini_fill_prompt.txt  gemini_page_json_spelling_prompt.txt  system_prompt.txt
research/: reading_list.md
scripts/: audit_equation_integrity.py  backfill_missing_entity_name.py  check_duplicate_facts.py  check_fact_reading_order.py  check_fact_schema_format.py  check_schema_key_literals.py  fix_fact_reading_order.py  fix_fact_schema_format.py  gemini_issue_rollup.py  hebrew_sentences.py  inspect_hf_bbox_resize.py  migrate_date_to_period.py  prepare_gemini_bbox_dataset.py  provider_smoke_test.py  push_gemini_dataset_to_hf.py  qwen3_5_transformers_flash_smoke.py  restore_annotation_backup.py  run_local_doctr_wet_test.py  runpod_api_warmup.sh  runpod_bootstrap.sh  runpod_deploy_doppler.sh  runpod_machine_tools.sh  runpod_model_test.sh  runpod_pod_start.sh  runpod_smoke_test.sh  runpod_train.sh  runpod_validate_data.sh  runpod_webui.sh  sync_page_level_predicted_schema.py  sync_schema_prompts.py  token_stats_qwen35.py
tests/: conftest.py  test_annotation_core.py  test_api_ai.py  test_app_layout.py  test_app_path_selection.py  test_app_startup.py  test_app_thinking.py  test_apply_entity_button.py  test_bbox_even_quantization.py  test_benchmark_cli.py  test_benchmark_config.py  test_benchmark_logging.py  test_benchmark_new.py  test_benchmark_runner.py  test_benchmark_scoring.py  test_benchmark_web.py  test_dashboard_shell.py  test_dataset_builder.py  test_demo_visual_flow.py  test_duplicate_facts.py  test_entity_name_backfill_script.py  test_equation_integrity.py  test_export_quantized.py  test_fact_normalization.py  test_fact_order_scripts.py  test_fact_ordering.py  test_fact_schema_scripts.py  test_finetree_v2_8.py  test_finetree_v2_9.py  test_finetree_v3_0_value_bbox_factnum.py  test_finetree_v3_factnum_doctr.py  test_finetune_config.py  test_gemini_bbox_dataset.py  test_gemini_few_shot.py  test_gemini_issue_rollup.py  test_gemini_vlm.py  test_gui_qtbot.py  test_list_commands.py  test_load_db.py  test_local_doctr.py  (+30 more)
vllm_api_tests/: batch_inference.py  first_smoke_test.py  parallel_batch_inference.py  test.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
website/: index.html
(+1434 files in other folders)
